# get-rates-app

./: .gitignore  README.md  pyproject.toml
app/: main.py
sql/: 001_init.sql
